--- a/app/src/main/res/layout/fragment_episode_details.xml
+++ b/app/src/main/res/layout/fragment_episode_details.xml
@@ -3,13 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@color/app_background"
     android:layout_height="match_parent">
 
     <ImageView
         android:id="@+id/EpisodeimageView"
         android:layout_width="300dp"
         android:layout_height="300dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="70dp"
         android:scaleType="centerCrop"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -22,7 +23,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="The Ricklantis Mixup"
+        android:textColor="@color/textcolor"
+        android:text=""
         android:textSize="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -35,8 +37,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="32dp"
+        android:textColor="@color/textcolor"
         android:textSize="20dp"
-        android:text="Episode: S03E07"
+        android:text="Episode: "
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/EpisodeName" />
 
@@ -45,17 +48,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="20dp"
+        android:textColor="@color/textcolor"
         android:layout_marginTop="20dp"
-        android:text="Release Date: September 10, 2017"
+        android:text="Release Date: "
         app:layout_constraintStart_toStartOf="@+id/Episode"
         app:layout_constraintTop_toBottomOf="@+id/Episode" />
 
     <TextView
-        android:id="@+id/Residents"
+        android:id="@+id/Characters"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="20dp"
-        android:text="Characters: Earth"
+        android:text="Characters: "
+        android:textColor="@color/textcolor"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/EpisodeimageView"
@@ -66,10 +71,12 @@
         android:id="@+id/back"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        app:tint="@color/bottom_nav_selected_item"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/baseline_arrow_back_24" />
+        app:srcCompat="@drawable/baseline_arrow_back_24"
+        app:tint="@color/textcolor"  />
 
 
 
