--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/characterFragment"
+        android:id="@+id/characterFragment2"
         android:icon="@drawable/baseline_keyboard_arrow_down_24"
         android:title="Characters" />
     <item
-        android:id="@+id/locationFragment"
+        android:id="@+id/locationFragment2"
         android:icon="@drawable/baseline_keyboard_arrow_down_24"
         android:title="Locations" />
     <item
-        android:id="@+id/episodeFragment"
+        android:id="@+id/episodeFragment2"
         android:icon="@drawable/baseline_keyboard_arrow_down_24"
         android:title="Episodes" />
 </menu>
